adiceionei um paragrafo e estou salvando com atalhos

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit ullam exercitationem suscipit, fuga tempore qui illo molestiae eveniet commodi et ex eaque autem eius sapiente in possimus quam nihil mollitia.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, quas necessitatibus omnis atque voluptatibus soluta aut reprehenderit exercitationem! Odit numquam voluptates possimus quod inventore repellat! Dolore soluta maiores deleniti perspiciatis.</p>
 </body>
 </html>
